--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "name": "music_bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "prettier": "prettier --write src/**/*.js"
+  },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "@discordjs/builders": "^1.2.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.2.0",
+    "@discordjs/voice": "^0.11.0",
+    "discord-api-types": "^0.37.11",
+    "discord-player": "^5.3.2",
+    "discord.js": "^14.5.0",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1"
   }
 }
