--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "music_bot",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/app/server.js",
+    "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules -r tsconfig-paths/register src/index.ts",
+    "build": "rimraf dist dist && tsc",
     "prettier": "prettier --write src/**/*.js"
   },
   "dependencies": {
@@ -17,7 +18,12 @@
     "discord-player": "^5.3.2",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.4"
   }
 }
