--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "soundcloud-scraper": "^5.0.3",
+    "spotify-url-info": "^3.1.9",
+    "youtube-sr": "^4.3.4",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
