--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
     "prettier": "prettier --write src/**/*.js"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.2.0",
-    "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^1.2.0",
-    "@discordjs/voice": "^0.11.0",
-    "discord-api-types": "^0.37.11",
-    "discord-player": "^5.3.2",
-    "discord.js": "^14.5.0",
+    "@discord-player/extractor": "^4.1.2",
+    "@discordjs/builders": "^1.5.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/rest": "^1.6.0",
+    "@discordjs/voice": "^0.15.0",
+    "discord-api-types": "^0.37.36",
+    "discord-player": "^6.1.1",
+    "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
+    "ffmpeg-static": "^5.1.0",
+    "opusscript": "^0.0.8",
+    "play-dl": "^1.9.6",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.4.0",
     "soundcloud-scraper": "^5.0.3",
-    "spotify-url-info": "^3.1.9",
+    "spotify-url-info": "^3.2.3",
     "youtube-sr": "^4.3.4",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4"
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^5.0.2"
   }
 }
